--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -1,3 +1,7 @@
+{% extends 'todo/base.html' %}
+
+{% block content %}
+
 <h1>Sign Up</h1>
 <h2>{{error}}</h2>
 
@@ -6,3 +10,5 @@
     {% csrf_token %}
     <button type="submit">Sign up</button>
 </form>
+
+{% endblock %}
